--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Node modules
 /node_modules
-/.pnp
+
+# Yarn & PnP
 .pnp.*
 .yarn/*
 !.yarn/patches
@@ -10,32 +11,32 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
+# Testing
 /coverage
 
-# next.js
-/.next/
-/out/
+# Next.js
+/.next
+/out
+/vercel
 
-# production
+# Build outputs
 /build
 
-# misc
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# System files
 .DS_Store
 *.pem
 
-# debug
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
