--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "NEXT_IGNORE_ESLINT=true NEXT_IGNORE_TYPE_ERRORS=true next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write ."
-  },
+    "vercel-build": "next build"
+  }, 
+
   "dependencies": {
     "firebase": "^11.8.1",
     "next": "15.3.3",
