Set up Xero OAuth integration with callback and organisations route

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.3.3",
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "xero-node": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.0",
